# com.unity.webrtc

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  package.json
.github/workflows/: publish_upm.yml
BuildScripts~/: build_ahb_plugin.sh
Plugin~/WebRTCPlugin/: CMakeLists.txt  UnityRenderEvent.cpp  UnityVideoDecoderFactory.cpp  UnityVideoRenderer.cpp  UnityVideoRenderer.h  VideoFrameAdapter.cpp  WebRTCPlugin.cpp
Plugin~/WebRTCPlugin/Codec/: CMakeLists.txt  CreateVideoCodecFactory.cpp  CreateVideoCodecFactory.h
Plugin~/WebRTCPlugin/Codec/AhbCodec/: AhbConvertPass.cpp  AhbConvertPass.h  AhbDecodePipeline.cpp  AhbDecodePipeline.h  AhbDisplayBuffer.h  AhbH264DecoderFactory.cpp  AhbH264DecoderFactory.h  AhbMediaCodec.cpp  AhbMediaCodec.h  AhbVulkanContext.h  CMakeLists.txt  ycbcr_to_rgba.comp  ycbcr_to_rgba.spv.inc
Plugin~/WebRTCPlugin/GraphicsDevice/Vulkan/: ListOfVulkanFunctions.inl  UnityVulkanInitCallback.cpp
Plugin~/libcxx/: debug.cpp
Runtime/Scripts/: SpatialAudioReceiver.cs  VideoStreamTrack.cs  WebRTC.cs
